--- a/user/templates/loginRegister.html
+++ b/user/templates/loginRegister.html
@@ -29,15 +29,15 @@
                     </h1>
                     <ul class="items-center flex-block">
                         <li class="py-3">
-                            <a href="#">
-                                <button href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                            <a href="{% url 'user:loginPage' %}">
+                                <button href="{% url 'user:loginPage' %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                                     LOGIN
                                 </button>
                             </a>
                         </li>
                         <li class="py-3">
-                            <a href="#">
-                                <button href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                            <a href="{% url 'user:register' %}">
+                                <button href="{% url 'user:register' %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                                     REGISTER
                                 </button>
                             </a>
