delete login_required and fix manaje pertandingan

--- a/user/templates/loginRegister.html
+++ b/user/templates/loginRegister.html
@@ -29,14 +29,14 @@
                     </h1>
                     <ul class="items-center flex-block">
                         <li class="py-3">
-                            <a href="#">
+                            <a href="{% url 'user:loginPage' %}">
                                 <button href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                                     LOGIN
                                 </button>
                             </a>
                         </li>
                         <li class="py-3">
-                            <a href="#">
+                            <a href="{% url 'user:index' %}">
                                 <button href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                                     REGISTER
                                 </button>
