--- a/user/templates/registerUser.html
+++ b/user/templates/registerUser.html
@@ -5,92 +5,113 @@
 {% endblock meta %}
 
 {% block content %}
-<head>
-    <title>
-        Register User
-    </title>
-    <script
-        defer
-        src="https://unpkg.com/@alpinejs/collapse@3.x.x/dist/cdn.min.js"
-      ></script>
-  
-      <!-- Alpine CDN -->
-      <script
-        defer
-        src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
-      ></script>
-  </head>
+    <head>
+        <title>
+            Register User
+        </title>
+        <script
+                defer
+                src="https://unpkg.com/@alpinejs/collapse@3.x.x/dist/cdn.min.js"
+        ></script>
+
+        <!-- Alpine CDN -->
+        <script
+                defer
+                src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
+        ></script>
+    </head>
     <body class="bg-gray-200">
-        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto">
-            <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-                <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-                    <h1 class="text-l font-bold leading-tight tracking-tight text-gray-900 md:text-xl dark:text-white">
-                        Create an account
-                    </h1>
-                    <form class="space-y-1 md:space-y-2" action="#">
-                        <div>
-                            <label for="username" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Username</label>
-                            <input type="username" name="username" id="username" class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="cbkadal" required="">
-                        </div>
-                        <div>
-                            <label for="password" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Password</label>
-                            <input type="password" name="password" id="password" placeholder="••••••••" class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                        </div>
-                        <div>
-                            <label for="nama-depan" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Nama Depan</label>
-                            <input type="nama-depan" name="nama-depan" id="nama-depan" class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                        </div>
-                        <div>
-                            <label for="nama-blkg" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Nama Belakang</label>
-                            <input type="nama-blkg" name="nama-blkg" id="nama-blkg" class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                        </div>
-                        <div>
-                            <label for="no_hp" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Nomor HP</label>
-                            <input type="no_hp" name="no_hp" id="no_hp" class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                        </div>
-                        <div>
-                            <label for="email" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Email</label>
-                            <input type="email" name="email" id="email" class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                        </div>
-                        <div>
-                            <label for="alamat" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Alamat</label>
-                            <input type="alamat" name="alamat" id="alamat" class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                        </div>
-                        <div>
-                           <!-- Dropdown toggle button -->
-                           <label for="status" class="block mt-4 mb-2 text-xs font-xs text-gray-900 dark:text-white">Status</label>
-                            <!-- Dropdown list -->
-                            <div class="py-2 mt-2 bg-white bg-gray-100 rounded-md shadow-xl w-44">
-                                <a href="#" class="block px-4 py-2 text-xs text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">
-                                    Mahasiswa
-                                </a>
-                                <a href="#" class="block px-4 py-2 text-xs text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">
-                                    Dosen tendik
-                                </a>
-                                <a href="#" class="block px-4 py-2 text-xs text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">
-                                    Alumni
-                                </a>
-                                <a href="#" class="block px-4 py-2 text-xs text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">
-                                    Umum
-                                </a>
-                            </div>
-                        </div>
-                        {% if isPanitia %}
+    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto">
+        <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+            <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+                <h1 class="text-l font-bold leading-tight tracking-tight text-gray-900 md:text-xl dark:text-white">
+                    Create an account
+                </h1>
+                <form class="space-y-1 md:space-y-2" method="post">
+                    {% csrf_token %}
+                    <div>
+                        <label for="username"
+                               class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Username</label>
+                        <input type="text" name="username" id="username"
+                               class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               placeholder="cbkadal" required="">
+                    </div>
+                    <div>
+                        <label for="password"
+                               class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Password</label>
+                        <input type="password" name="password" id="password" placeholder="••••••••"
+                               class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               required="">
+                    </div>
+                    <div>
+                        <label for="nama-depan" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Nama
+                            Depan</label>
+                        <input type="text" name="nama-depan" id="nama-depan"
+                               class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               required="">
+                    </div>
+                    <div>
+                        <label for="nama-blkg" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Nama
+                            Belakang</label>
+                        <input type="text" name="nama-blkg" id="nama-blkg"
+                               class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               required="">
+                    </div>
+                    <div>
+                        <label for="no_hp" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Nomor
+                            HP</label>
+                        <input type="number" name="no_hp" id="no_hp"
+                               class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               required="">
+                    </div>
+                    <div>
+                        <label for="email"
+                               class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Email</label>
+                        <input type="email" name="email" id="email"
+                               class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               required="">
+                    </div>
+                    <div>
+                        <label for="alamat"
+                               class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Alamat</label>
+                        <input type="text" name="alamat" id="alamat"
+                               class="h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               required="">
+                    </div>
+                    <div>
+                        <!-- Dropdown toggle button -->
+                        <label for="status"
+                               class="block mt-4 mb-2 text-xs font-xs text-gray-900 dark:text-white">Status</label>
+                        <select name="status" id="status"
+                                class="block px-4 py-2 text-xs text-gray-300 text-gray-700 bg-gray-100 rounded-md shadow-xl w-44 hover:bg-gray-400 hover:text-white">
+                            <option value="Mahasiswa">Mahasiswa</option>
+                            <option value="Dosen tendik">Dosen tendik</option>
+                            <option value="Alumni">Alumni</option>
+                            <option value="Umum">Umum</option>
+                        </select>
+                    </div>
+                    {% if isPanitia %}
                         <div>
                             <label for="jabatan" class="block mb-2 text-xs font-xs text-gray-900 dark:text-white">Jabatan</label>
-                            <input type="jabatan" name="jabatan" id="jabatan" class="mb-4 h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                            <input type="text" name="jabatan" id="jabatan"
+                                   class="mb-4 h-min bg-gray-50 border border-gray-300 text-gray-900 sm:text-xs rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                   required="">
                         </div>
-                        {% endif %}
-                        <button type="submit" class="w-full text-gray-700 bg-white hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Daftar</button>
-                        <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                            Already have an account? <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login</a>
-                        </p>
-                        
+                    {% endif %}
+                    <button type="submit"
+                            class="w-full text-gray-700 bg-white hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                        Daftar
+                    </button>
+                    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+                        Already have an account? <a href="#"
+                                                    class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login</a>
+                    </p>
 
-                    </form>
-                </div>
+
+                </form>
             </div>
         </div>
+    </div>
     </body>
-    
+
 {% endblock content %}
